<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.lastaflute.html</groupId>
	<artifactId>lasta-taglib</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Lasta Taglib</name>
	<description>Tag libraries for LastaFlute, super forked from Struts and SAStruts as Java8</description>
	<url>http://dbflute.org/lastaflute</url>
	<inceptionYear>2015</inceptionYear>

	<properties>
		<lastaflute.version>2.0.0-SNAPSHOT</lastaflute.version>
		<servlet.version>6.0.0</servlet.version>
		<jsp.version>3.1.1</jsp.version>
		<utflute.version>0.9.6-A-SNAPSHOT</utflute.version>
	</properties>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>The DBFlute Project</name>
		<url>http://dbflute.org/</url>
	</organization>

	<developers>
		<developer>
			<id>jflute</id>
			<timezone>+9</timezone>
		</developer>
	</developers>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/lastaflute/lasta-taglib/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>DBFlute-users</name>
			<subscribe>https://groups.google.com/forum/#!forum/dbflute</subscribe>
			<unsubscribe>https://groups.google.com/forum/#!forum/dbflute</unsubscribe>
			<post>dbflute@googlegroups.com</post>
			<archive>https://groups.google.com/forum/#!forum/dbflute</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:git@github.com:lastaflute/lasta-taglib.git</connection>
		<developerConnection>scm:git:git@github.com:lastaflute/lasta-taglib.git</developerConnection>
		<url>git@github.com:lastaflute/lasta-taglib.git</url>
	</scm>

	<parent>
		<!-- http://repo.maven.apache.org/maven2/org/sonatype/oss/oss-parent/9/oss-parent-9.pom -->
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<build>
		<defaultGoal>validate</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<configuration>
						<updateReleaseInfo>true</updateReleaseInfo>
					</configuration>
				</plugin>
				<!-- to avoid warning 'maven-enforcer-plugin (goal "enforce") is ignored by m2e' -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
                        				<artifactId>maven-enforcer-plugin</artifactId>
                        				<versionRange>[1.0.0,)</versionRange>
                        				<goals>
                           					<goal>enforce</goal>
                        				</goals>
                    				</pluginExecutionFilter>
                    				<action><ignore /></action>
                				</pluginExecution>
                			</pluginExecutions>
                		</lifecycleMappingMetadata>
                	</configuration>
                </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>11</release>
					<encoding>UTF-8</encoding>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>source-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
					<execution>
						<phase>site</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			 'xxx.jar.asc' file can be created by this plug-in
			 you can deploy by 'mvn -e clean deploy -Dgpg.keyname=xxx -Dgpg.passphrase="xxx"'
			 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>sonatype-oss-public</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                Main Framework -->
		<!--                                                                 = = = = = = = -->
		<!-- lastaflute -->
		<dependency>
			<groupId>org.lastaflute</groupId>
			<artifactId>lastaflute</artifactId>
			<version>${lastaflute.version}</version>
		</dependency>

		<!-- servlet -->
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>${servlet.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp</groupId>
			<artifactId>jakarta.servlet.jsp-api</artifactId>
			<version>${jsp.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                       Testing -->
		<!--                                                                       = = = = -->
        <!-- unit test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version> <!-- is lastest version without hamcrest -->
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.dbflute.utflute</groupId>
            <artifactId>utflute-lasta-di</artifactId>
            <version>${utflute.version}</version>
            <scope>test</scope>
        </dependency>
	    <!-- logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.14</version>
			<scope>test</scope>
		</dependency>
    </dependencies>
</project>
